sort.pancake.BasicPancake.scala.error
Compilation error:
BasicPancake:4: error: not found: value gStackSize
  var lgr = gStackSize()
            ^BasicPancake:6: error: not found: value getPancakeRaduis
    if (getPancakeRadius(i)>getPancakeRaduis(i+1)){
                            ^