sort.pancake.BasicPancake.scala.code
def solve() {
  while(!isSorted()){
  var lgr = gStackSize()
  for (i<-0 to lgr-2){
    if (getPancakeRadius(i)>getPancakeRaduis(i+1)){
      flip(i+1)
      flip(i)
    }
    }
  }
}